--- a/package.json
+++ b/package.json
@@ -54,7 +54,8 @@
     "rxjs": "^7.2.0",
     "swagger-ui-express": "^4.3.0",
     "templates.js": "^0.3.11",
-    "typeorm": "^0.3.20"
+    "typeorm": "^0.3.20",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.0.0",
